--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@webpack-cli/init": "^0.3.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "eslint": "^6.8.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
