--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode=production",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --config webpack.dev.js"
   },
   "devDependencies": {
     "@webpack-cli/init": "^0.3.0",
     "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.64.4",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
     "@tweenjs/tween.js": "^18.5.0",
